LAB03/y.output
Terminals unused in grammar

   DO
   BREAK
   CHAR
   DOUBLE
   SWITCH
   CASE
   DEFAULT
   CONTINUE


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program unit
    3        | unit

    4 unit: var_declaration
    5     | func_definition

    6 $@1: /* empty */

    7 $@2: /* empty */

    8 func_definition: type_specifier ID LPAREN $@1 parameter_list RPAREN $@2 compound_statement

    9 $@3: /* empty */

   10 func_definition: type_specifier ID LPAREN $@3 RPAREN compound_statement

   11 parameter_list: parameter_list COMMA type_specifier ID
   12               | parameter_list COMMA type_specifier
   13               | type_specifier ID
   14               | type_specifier

   15 $@4: /* empty */

   16 compound_statement: LCURL $@4 statements RCURL
   17                   | LCURL RCURL

   18 var_declaration: type_specifier declaration_list SEMICOLON

   19 type_specifier: INT
   20               | FLOAT
   21               | VOID

   22 declaration_list: declaration_list COMMA ID
   23                 | declaration_list COMMA ID LTHIRD CONST_INT RTHIRD
   24                 | ID
   25                 | ID LTHIRD CONST_INT RTHIRD

   26 statements: statement
   27           | statements statement

   28 statement: var_declaration
   29          | func_definition
   30          | expression_statement
   31          | compound_statement
   32          | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   33          | IF LPAREN expression RPAREN statement
   34          | IF LPAREN expression RPAREN statement ELSE statement
   35          | WHILE LPAREN expression RPAREN statement
   36          | PRINTLN LPAREN ID RPAREN SEMICOLON
   37          | RETURN expression SEMICOLON

   38 expression_statement: SEMICOLON
   39                     | expression SEMICOLON

   40 variable: ID
   41         | ID LTHIRD expression RTHIRD

   42 expression: logic_expression
   43           | variable ASSIGNOP logic_expression

   44 logic_expression: rel_expression
   45                 | rel_expression LOGICOP rel_expression

   46 rel_expression: simple_expression
   47               | simple_expression RELOP simple_expression

   48 simple_expression: term
   49                  | simple_expression ADDOP term

   50 term: unary_expression
   51     | term MULOP unary_expression

   52 unary_expression: ADDOP unary_expression
   53                 | NOT unary_expression
   54                 | factor

   55 factor: variable
   56       | ID LPAREN argument_list RPAREN
   57       | LPAREN expression RPAREN
   58       | CONST_INT
   59       | CONST_FLOAT
   60       | variable INCOP
   61       | variable DECOP

   62 argument_list: arguments
   63              | /* empty */

   64 arguments: arguments COMMA logic_expression
   65          | logic_expression


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 33 34
ELSE (259) 34
FOR (260) 32
WHILE (261) 35
DO (262)
BREAK (263)
INT (264) 19
CHAR (265)
FLOAT (266) 20
DOUBLE (267)
VOID (268) 21
RETURN (269) 37
SWITCH (270)
CASE (271)
DEFAULT (272)
CONTINUE (273)
PRINTLN (274) 36
ADDOP (275) 49 52
MULOP (276) 51
INCOP (277) 60
DECOP (278) 61
RELOP (279) 47
ASSIGNOP (280) 43
LOGICOP (281) 45
NOT (282) 53
LPAREN (283) 8 10 32 33 34 35 36 56 57
RPAREN (284) 8 10 32 33 34 35 36 56 57
LCURL (285) 16 17
RCURL (286) 16 17
LTHIRD (287) 23 25 41
RTHIRD (288) 23 25 41
COMMA (289) 11 12 22 23 64
SEMICOLON (290) 18 36 37 38 39
CONST_INT (291) 23 25 58
CONST_FLOAT (292) 59
ID (293) 8 10 11 13 22 23 24 25 36 40 41 56
LOWER_THAN_ELSE (294)


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
start (41)
    on left: 1, on right: 0
program (42)
    on left: 2 3, on right: 1 2
unit (43)
    on left: 4 5, on right: 2 3
func_definition (44)
    on left: 8 10, on right: 5 29
$@1 (45)
    on left: 6, on right: 8
$@2 (46)
    on left: 7, on right: 8
$@3 (47)
    on left: 9, on right: 10
parameter_list (48)
    on left: 11 12 13 14, on right: 8 11 12
compound_statement (49)
    on left: 16 17, on right: 8 10 31
$@4 (50)
    on left: 15, on right: 16
var_declaration (51)
    on left: 18, on right: 4 28
type_specifier (52)
    on left: 19 20 21, on right: 8 10 11 12 13 14 18
declaration_list (53)
    on left: 22 23 24 25, on right: 18 22 23
statements (54)
    on left: 26 27, on right: 16 27
statement (55)
    on left: 28 29 30 31 32 33 34 35 36 37, on right: 26 27 32 33 34
    35
expression_statement (56)
    on left: 38 39, on right: 30 32
variable (57)
    on left: 40 41, on right: 43 55 60 61
expression (58)
    on left: 42 43, on right: 32 33 34 35 37 39 41 57
logic_expression (59)
    on left: 44 45, on right: 42 43 64 65
rel_expression (60)
    on left: 46 47, on right: 44 45
simple_expression (61)
    on left: 48 49, on right: 46 47 49
term (62)
    on left: 50 51, on right: 48 49 51
unary_expression (63)
    on left: 52 53 54, on right: 50 51 52 53
factor (64)
    on left: 55 56 57 58 59 60 61, on right: 54
argument_list (65)
    on left: 62 63, on right: 56
arguments (66)
    on left: 64 65, on right: 62 64


State 0

    0 $accept: . start $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    start            go to state 4
    program          go to state 5
    unit             go to state 6
    func_definition  go to state 7
    var_declaration  go to state 8
    type_specifier   go to state 9


State 1

   19 type_specifier: INT .

    $default  reduce using rule 19 (type_specifier)


State 2

   20 type_specifier: FLOAT .

    $default  reduce using rule 20 (type_specifier)


State 3

   21 type_specifier: VOID .

    $default  reduce using rule 21 (type_specifier)


State 4

    0 $accept: start . $end

    $end  shift, and go to state 10


State 5

    1 start: program .
    2 program: program . unit

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    $default  reduce using rule 1 (start)

    unit             go to state 11
    func_definition  go to state 7
    var_declaration  go to state 8
    type_specifier   go to state 9


State 6

    3 program: unit .

    $default  reduce using rule 3 (program)


State 7

    5 unit: func_definition .

    $default  reduce using rule 5 (unit)


State 8

    4 unit: var_declaration .

    $default  reduce using rule 4 (unit)


State 9

    8 func_definition: type_specifier . ID LPAREN $@1 parameter_list RPAREN $@2 compound_statement
   10                | type_specifier . ID LPAREN $@3 RPAREN compound_statement
   18 var_declaration: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 12

    declaration_list  go to state 13


State 10

    0 $accept: start $end .

    $default  accept


State 11

    2 program: program unit .

    $default  reduce using rule 2 (program)


State 12

    8 func_definition: type_specifier ID . LPAREN $@1 parameter_list RPAREN $@2 compound_statement
   10                | type_specifier ID . LPAREN $@3 RPAREN compound_statement
   24 declaration_list: ID .
   25                 | ID . LTHIRD CONST_INT RTHIRD

    LPAREN  shift, and go to state 14
    LTHIRD  shift, and go to state 15

    $default  reduce using rule 24 (declaration_list)


State 13

   18 var_declaration: type_specifier declaration_list . SEMICOLON
   22 declaration_list: declaration_list . COMMA ID
   23                 | declaration_list . COMMA ID LTHIRD CONST_INT RTHIRD

    COMMA      shift, and go to state 16
    SEMICOLON  shift, and go to state 17


State 14

    8 func_definition: type_specifier ID LPAREN . $@1 parameter_list RPAREN $@2 compound_statement
   10                | type_specifier ID LPAREN . $@3 RPAREN compound_statement

    RPAREN    reduce using rule 9 ($@3)
    $default  reduce using rule 6 ($@1)

    $@1  go to state 18
    $@3  go to state 19


State 15

   25 declaration_list: ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 20


State 16

   22 declaration_list: declaration_list COMMA . ID
   23                 | declaration_list COMMA . ID LTHIRD CONST_INT RTHIRD

    ID  shift, and go to state 21


State 17

   18 var_declaration: type_specifier declaration_list SEMICOLON .

    $default  reduce using rule 18 (var_declaration)


State 18

    8 func_definition: type_specifier ID LPAREN $@1 . parameter_list RPAREN $@2 compound_statement

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    parameter_list  go to state 22
    type_specifier  go to state 23


State 19

   10 func_definition: type_specifier ID LPAREN $@3 . RPAREN compound_statement

    RPAREN  shift, and go to state 24


State 20

   25 declaration_list: ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 25


State 21

   22 declaration_list: declaration_list COMMA ID .
   23                 | declaration_list COMMA ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 26

    $default  reduce using rule 22 (declaration_list)


State 22

    8 func_definition: type_specifier ID LPAREN $@1 parameter_list . RPAREN $@2 compound_statement
   11 parameter_list: parameter_list . COMMA type_specifier ID
   12               | parameter_list . COMMA type_specifier

    RPAREN  shift, and go to state 27
    COMMA   shift, and go to state 28


State 23

   13 parameter_list: type_specifier . ID
   14               | type_specifier .

    ID  shift, and go to state 29

    $default  reduce using rule 14 (parameter_list)


State 24

   10 func_definition: type_specifier ID LPAREN $@3 RPAREN . compound_statement

    LCURL  shift, and go to state 30

    compound_statement  go to state 31


State 25

   25 declaration_list: ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 25 (declaration_list)


State 26

   23 declaration_list: declaration_list COMMA ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 32


State 27

    8 func_definition: type_specifier ID LPAREN $@1 parameter_list RPAREN . $@2 compound_statement

    $default  reduce using rule 7 ($@2)

    $@2  go to state 33


State 28

   11 parameter_list: parameter_list COMMA . type_specifier ID
   12               | parameter_list COMMA . type_specifier

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    type_specifier  go to state 34


State 29

   13 parameter_list: type_specifier ID .

    $default  reduce using rule 13 (parameter_list)


State 30

   16 compound_statement: LCURL . $@4 statements RCURL
   17                   | LCURL . RCURL

    RCURL  shift, and go to state 35

    $default  reduce using rule 15 ($@4)

    $@4  go to state 36


State 31

   10 func_definition: type_specifier ID LPAREN $@3 RPAREN compound_statement .

    $default  reduce using rule 10 (func_definition)


State 32

   23 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 37


State 33

    8 func_definition: type_specifier ID LPAREN $@1 parameter_list RPAREN $@2 . compound_statement

    LCURL  shift, and go to state 30

    compound_statement  go to state 38


State 34

   11 parameter_list: parameter_list COMMA type_specifier . ID
   12               | parameter_list COMMA type_specifier .

    ID  shift, and go to state 39

    $default  reduce using rule 12 (parameter_list)


State 35

   17 compound_statement: LCURL RCURL .

    $default  reduce using rule 17 (compound_statement)


State 36

   16 compound_statement: LCURL $@4 . statements RCURL

    IF           shift, and go to state 40
    FOR          shift, and go to state 41
    WHILE        shift, and go to state 42
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 43
    PRINTLN      shift, and go to state 44
    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    LCURL        shift, and go to state 30
    SEMICOLON    shift, and go to state 48
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    func_definition       go to state 52
    compound_statement    go to state 53
    var_declaration       go to state 54
    type_specifier        go to state 9
    statements            go to state 55
    statement             go to state 56
    expression_statement  go to state 57
    variable              go to state 58
    expression            go to state 59
    logic_expression      go to state 60
    rel_expression        go to state 61
    simple_expression     go to state 62
    term                  go to state 63
    unary_expression      go to state 64
    factor                go to state 65


State 37

   23 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 23 (declaration_list)


State 38

    8 func_definition: type_specifier ID LPAREN $@1 parameter_list RPAREN $@2 compound_statement .

    $default  reduce using rule 8 (func_definition)


State 39

   11 parameter_list: parameter_list COMMA type_specifier ID .

    $default  reduce using rule 11 (parameter_list)


State 40

   33 statement: IF . LPAREN expression RPAREN statement
   34          | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 66


State 41

   32 statement: FOR . LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 67


State 42

   35 statement: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 68


State 43

   37 statement: RETURN . expression SEMICOLON

    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable           go to state 58
    expression         go to state 69
    logic_expression   go to state 60
    rel_expression     go to state 61
    simple_expression  go to state 62
    term               go to state 63
    unary_expression   go to state 64
    factor             go to state 65


State 44

   36 statement: PRINTLN . LPAREN ID RPAREN SEMICOLON

    LPAREN  shift, and go to state 70


State 45

   52 unary_expression: ADDOP . unary_expression

    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable          go to state 71
    unary_expression  go to state 72
    factor            go to state 65


State 46

   53 unary_expression: NOT . unary_expression

    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable          go to state 71
    unary_expression  go to state 73
    factor            go to state 65


State 47

   57 factor: LPAREN . expression RPAREN

    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable           go to state 58
    expression         go to state 74
    logic_expression   go to state 60
    rel_expression     go to state 61
    simple_expression  go to state 62
    term               go to state 63
    unary_expression   go to state 64
    factor             go to state 65


State 48

   38 expression_statement: SEMICOLON .

    $default  reduce using rule 38 (expression_statement)


State 49

   58 factor: CONST_INT .

    $default  reduce using rule 58 (factor)


State 50

   59 factor: CONST_FLOAT .

    $default  reduce using rule 59 (factor)


State 51

   40 variable: ID .
   41         | ID . LTHIRD expression RTHIRD
   56 factor: ID . LPAREN argument_list RPAREN

    LPAREN  shift, and go to state 75
    LTHIRD  shift, and go to state 76

    $default  reduce using rule 40 (variable)


State 52

   29 statement: func_definition .

    $default  reduce using rule 29 (statement)


State 53

   31 statement: compound_statement .

    $default  reduce using rule 31 (statement)


State 54

   28 statement: var_declaration .

    $default  reduce using rule 28 (statement)


State 55

   16 compound_statement: LCURL $@4 statements . RCURL
   27 statements: statements . statement

    IF           shift, and go to state 40
    FOR          shift, and go to state 41
    WHILE        shift, and go to state 42
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 43
    PRINTLN      shift, and go to state 44
    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    LCURL        shift, and go to state 30
    RCURL        shift, and go to state 77
    SEMICOLON    shift, and go to state 48
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    func_definition       go to state 52
    compound_statement    go to state 53
    var_declaration       go to state 54
    type_specifier        go to state 9
    statement             go to state 78
    expression_statement  go to state 57
    variable              go to state 58
    expression            go to state 59
    logic_expression      go to state 60
    rel_expression        go to state 61
    simple_expression     go to state 62
    term                  go to state 63
    unary_expression      go to state 64
    factor                go to state 65


State 56

   26 statements: statement .

    $default  reduce using rule 26 (statements)


State 57

   30 statement: expression_statement .

    $default  reduce using rule 30 (statement)


State 58

   43 expression: variable . ASSIGNOP logic_expression
   55 factor: variable .
   60       | variable . INCOP
   61       | variable . DECOP

    INCOP     shift, and go to state 79
    DECOP     shift, and go to state 80
    ASSIGNOP  shift, and go to state 81

    $default  reduce using rule 55 (factor)


State 59

   39 expression_statement: expression . SEMICOLON

    SEMICOLON  shift, and go to state 82


State 60

   42 expression: logic_expression .

    $default  reduce using rule 42 (expression)


State 61

   44 logic_expression: rel_expression .
   45                 | rel_expression . LOGICOP rel_expression

    LOGICOP  shift, and go to state 83

    $default  reduce using rule 44 (logic_expression)


State 62

   46 rel_expression: simple_expression .
   47               | simple_expression . RELOP simple_expression
   49 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 84
    RELOP  shift, and go to state 85

    $default  reduce using rule 46 (rel_expression)


State 63

   48 simple_expression: term .
   51 term: term . MULOP unary_expression

    MULOP  shift, and go to state 86

    $default  reduce using rule 48 (simple_expression)


State 64

   50 term: unary_expression .

    $default  reduce using rule 50 (term)


State 65

   54 unary_expression: factor .

    $default  reduce using rule 54 (unary_expression)


State 66

   33 statement: IF LPAREN . expression RPAREN statement
   34          | IF LPAREN . expression RPAREN statement ELSE statement

    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable           go to state 58
    expression         go to state 87
    logic_expression   go to state 60
    rel_expression     go to state 61
    simple_expression  go to state 62
    term               go to state 63
    unary_expression   go to state 64
    factor             go to state 65


State 67

   32 statement: FOR LPAREN . expression_statement expression_statement expression RPAREN statement

    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    SEMICOLON    shift, and go to state 48
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    expression_statement  go to state 88
    variable              go to state 58
    expression            go to state 59
    logic_expression      go to state 60
    rel_expression        go to state 61
    simple_expression     go to state 62
    term                  go to state 63
    unary_expression      go to state 64
    factor                go to state 65


State 68

   35 statement: WHILE LPAREN . expression RPAREN statement

    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable           go to state 58
    expression         go to state 89
    logic_expression   go to state 60
    rel_expression     go to state 61
    simple_expression  go to state 62
    term               go to state 63
    unary_expression   go to state 64
    factor             go to state 65


State 69

   37 statement: RETURN expression . SEMICOLON

    SEMICOLON  shift, and go to state 90


State 70

   36 statement: PRINTLN LPAREN . ID RPAREN SEMICOLON

    ID  shift, and go to state 91


State 71

   55 factor: variable .
   60       | variable . INCOP
   61       | variable . DECOP

    INCOP  shift, and go to state 79
    DECOP  shift, and go to state 80

    $default  reduce using rule 55 (factor)


State 72

   52 unary_expression: ADDOP unary_expression .

    $default  reduce using rule 52 (unary_expression)


State 73

   53 unary_expression: NOT unary_expression .

    $default  reduce using rule 53 (unary_expression)


State 74

   57 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 92


State 75

   56 factor: ID LPAREN . argument_list RPAREN

    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    $default  reduce using rule 63 (argument_list)

    variable           go to state 71
    logic_expression   go to state 93
    rel_expression     go to state 61
    simple_expression  go to state 62
    term               go to state 63
    unary_expression   go to state 64
    factor             go to state 65
    argument_list      go to state 94
    arguments          go to state 95


State 76

   41 variable: ID LTHIRD . expression RTHIRD

    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable           go to state 58
    expression         go to state 96
    logic_expression   go to state 60
    rel_expression     go to state 61
    simple_expression  go to state 62
    term               go to state 63
    unary_expression   go to state 64
    factor             go to state 65


State 77

   16 compound_statement: LCURL $@4 statements RCURL .

    $default  reduce using rule 16 (compound_statement)


State 78

   27 statements: statements statement .

    $default  reduce using rule 27 (statements)


State 79

   60 factor: variable INCOP .

    $default  reduce using rule 60 (factor)


State 80

   61 factor: variable DECOP .

    $default  reduce using rule 61 (factor)


State 81

   43 expression: variable ASSIGNOP . logic_expression

    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable           go to state 71
    logic_expression   go to state 97
    rel_expression     go to state 61
    simple_expression  go to state 62
    term               go to state 63
    unary_expression   go to state 64
    factor             go to state 65


State 82

   39 expression_statement: expression SEMICOLON .

    $default  reduce using rule 39 (expression_statement)


State 83

   45 logic_expression: rel_expression LOGICOP . rel_expression

    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable           go to state 71
    rel_expression     go to state 98
    simple_expression  go to state 62
    term               go to state 63
    unary_expression   go to state 64
    factor             go to state 65


State 84

   49 simple_expression: simple_expression ADDOP . term

    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable          go to state 71
    term              go to state 99
    unary_expression  go to state 64
    factor            go to state 65


State 85

   47 rel_expression: simple_expression RELOP . simple_expression

    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable           go to state 71
    simple_expression  go to state 100
    term               go to state 63
    unary_expression   go to state 64
    factor             go to state 65


State 86

   51 term: term MULOP . unary_expression

    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable          go to state 71
    unary_expression  go to state 101
    factor            go to state 65


State 87

   33 statement: IF LPAREN expression . RPAREN statement
   34          | IF LPAREN expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 102


State 88

   32 statement: FOR LPAREN expression_statement . expression_statement expression RPAREN statement

    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    SEMICOLON    shift, and go to state 48
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    expression_statement  go to state 103
    variable              go to state 58
    expression            go to state 59
    logic_expression      go to state 60
    rel_expression        go to state 61
    simple_expression     go to state 62
    term                  go to state 63
    unary_expression      go to state 64
    factor                go to state 65


State 89

   35 statement: WHILE LPAREN expression . RPAREN statement

    RPAREN  shift, and go to state 104


State 90

   37 statement: RETURN expression SEMICOLON .

    $default  reduce using rule 37 (statement)


State 91

   36 statement: PRINTLN LPAREN ID . RPAREN SEMICOLON

    RPAREN  shift, and go to state 105


State 92

   57 factor: LPAREN expression RPAREN .

    $default  reduce using rule 57 (factor)


State 93

   65 arguments: logic_expression .

    $default  reduce using rule 65 (arguments)


State 94

   56 factor: ID LPAREN argument_list . RPAREN

    RPAREN  shift, and go to state 106


State 95

   62 argument_list: arguments .
   64 arguments: arguments . COMMA logic_expression

    COMMA  shift, and go to state 107

    $default  reduce using rule 62 (argument_list)


State 96

   41 variable: ID LTHIRD expression . RTHIRD

    RTHIRD  shift, and go to state 108


State 97

   43 expression: variable ASSIGNOP logic_expression .

    $default  reduce using rule 43 (expression)


State 98

   45 logic_expression: rel_expression LOGICOP rel_expression .

    $default  reduce using rule 45 (logic_expression)


State 99

   49 simple_expression: simple_expression ADDOP term .
   51 term: term . MULOP unary_expression

    MULOP  shift, and go to state 86

    $default  reduce using rule 49 (simple_expression)


State 100

   47 rel_expression: simple_expression RELOP simple_expression .
   49 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 84

    $default  reduce using rule 47 (rel_expression)


State 101

   51 term: term MULOP unary_expression .

    $default  reduce using rule 51 (term)


State 102

   33 statement: IF LPAREN expression RPAREN . statement
   34          | IF LPAREN expression RPAREN . statement ELSE statement

    IF           shift, and go to state 40
    FOR          shift, and go to state 41
    WHILE        shift, and go to state 42
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 43
    PRINTLN      shift, and go to state 44
    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    LCURL        shift, and go to state 30
    SEMICOLON    shift, and go to state 48
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    func_definition       go to state 52
    compound_statement    go to state 53
    var_declaration       go to state 54
    type_specifier        go to state 9
    statement             go to state 109
    expression_statement  go to state 57
    variable              go to state 58
    expression            go to state 59
    logic_expression      go to state 60
    rel_expression        go to state 61
    simple_expression     go to state 62
    term                  go to state 63
    unary_expression      go to state 64
    factor                go to state 65


State 103

   32 statement: FOR LPAREN expression_statement expression_statement . expression RPAREN statement

    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable           go to state 58
    expression         go to state 110
    logic_expression   go to state 60
    rel_expression     go to state 61
    simple_expression  go to state 62
    term               go to state 63
    unary_expression   go to state 64
    factor             go to state 65


State 104

   35 statement: WHILE LPAREN expression RPAREN . statement

    IF           shift, and go to state 40
    FOR          shift, and go to state 41
    WHILE        shift, and go to state 42
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 43
    PRINTLN      shift, and go to state 44
    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    LCURL        shift, and go to state 30
    SEMICOLON    shift, and go to state 48
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    func_definition       go to state 52
    compound_statement    go to state 53
    var_declaration       go to state 54
    type_specifier        go to state 9
    statement             go to state 111
    expression_statement  go to state 57
    variable              go to state 58
    expression            go to state 59
    logic_expression      go to state 60
    rel_expression        go to state 61
    simple_expression     go to state 62
    term                  go to state 63
    unary_expression      go to state 64
    factor                go to state 65


State 105

   36 statement: PRINTLN LPAREN ID RPAREN . SEMICOLON

    SEMICOLON  shift, and go to state 112


State 106

   56 factor: ID LPAREN argument_list RPAREN .

    $default  reduce using rule 56 (factor)


State 107

   64 arguments: arguments COMMA . logic_expression

    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable           go to state 71
    logic_expression   go to state 113
    rel_expression     go to state 61
    simple_expression  go to state 62
    term               go to state 63
    unary_expression   go to state 64
    factor             go to state 65


State 108

   41 variable: ID LTHIRD expression RTHIRD .

    $default  reduce using rule 41 (variable)


State 109

   33 statement: IF LPAREN expression RPAREN statement .
   34          | IF LPAREN expression RPAREN statement . ELSE statement

    ELSE  shift, and go to state 114

    $default  reduce using rule 33 (statement)


State 110

   32 statement: FOR LPAREN expression_statement expression_statement expression . RPAREN statement

    RPAREN  shift, and go to state 115


State 111

   35 statement: WHILE LPAREN expression RPAREN statement .

    $default  reduce using rule 35 (statement)


State 112

   36 statement: PRINTLN LPAREN ID RPAREN SEMICOLON .

    $default  reduce using rule 36 (statement)


State 113

   64 arguments: arguments COMMA logic_expression .

    $default  reduce using rule 64 (arguments)


State 114

   34 statement: IF LPAREN expression RPAREN statement ELSE . statement

    IF           shift, and go to state 40
    FOR          shift, and go to state 41
    WHILE        shift, and go to state 42
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 43
    PRINTLN      shift, and go to state 44
    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    LCURL        shift, and go to state 30
    SEMICOLON    shift, and go to state 48
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    func_definition       go to state 52
    compound_statement    go to state 53
    var_declaration       go to state 54
    type_specifier        go to state 9
    statement             go to state 116
    expression_statement  go to state 57
    variable              go to state 58
    expression            go to state 59
    logic_expression      go to state 60
    rel_expression        go to state 61
    simple_expression     go to state 62
    term                  go to state 63
    unary_expression      go to state 64
    factor                go to state 65


State 115

   32 statement: FOR LPAREN expression_statement expression_statement expression RPAREN . statement

    IF           shift, and go to state 40
    FOR          shift, and go to state 41
    WHILE        shift, and go to state 42
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 43
    PRINTLN      shift, and go to state 44
    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    LCURL        shift, and go to state 30
    SEMICOLON    shift, and go to state 48
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    func_definition       go to state 52
    compound_statement    go to state 53
    var_declaration       go to state 54
    type_specifier        go to state 9
    statement             go to state 117
    expression_statement  go to state 57
    variable              go to state 58
    expression            go to state 59
    logic_expression      go to state 60
    rel_expression        go to state 61
    simple_expression     go to state 62
    term                  go to state 63
    unary_expression      go to state 64
    factor                go to state 65


State 116

   34 statement: IF LPAREN expression RPAREN statement ELSE statement .

    $default  reduce using rule 34 (statement)


State 117

   32 statement: FOR LPAREN expression_statement expression_statement expression RPAREN statement .

    $default  reduce using rule 32 (statement)
